# rust-ffi-projects

number-range/: Cargo.toml
number-range/src/: lib.rs  numrng.c  numrng.h
string-template-plus/: Cargo.toml
string-template-plus/src/: lib.rs  strtp.c  strtp.h
